--- a/prometheus/docker-compose/prometheus.yml
+++ b/prometheus/docker-compose/prometheus.yml
@@ -15,6 +15,7 @@ services:
     ports:
       - 80:80
       - 443:443
+      - 2019:2019 # admin endpoint
     env_file:
       - prometheus.env
     networks:
