Revise kopia parameters as per official documentation and switch to bind mounts

--- a/moon/docker-compose/moon.yml
+++ b/moon/docker-compose/moon.yml
@@ -1,37 +1,32 @@
 services:
 
   kopia:
-    image: kopia/kopia:${KOPIA_VERSION}
-    container_name: Kopia
-    user: '0:0'
-    privileged: true
-    cap_add:
-      - SYS_ADMIN
+    image: kopia/kopia:${KOPIA_VERSION} # https://kopia.io/docs/installation/#docker-images
+    container_name: kopia
     security_opt:
-      - apparmor:unconfined
       - no-new-privileges:true
     restart: unless-stopped
     environment:
+      - PUID=${UID}
+      - PGID=${GID}
       - TZ=${TIMEZONE}
-      - KOPIA_PASSWORD=${KOPIA_PASSWORD}
-      - USER=${KOPIA_USER}
-    devices:
-      - /dev/fuse:/dev/fuse:rwm
+      - KOPIA_PASSWORD=${KOPIA_PASSWORD} # repository password
+      - USER=${KOPIA_USER} # repository user
+    # Setup the server that provides the web ui
     command:
       - server
       - start
-#      - --disable-csrf-token-checks
-      - --tls-cert-file=/data/home/XXX/ssl-certs/fullchain.pem
-      - --tls-key-file=/data/home/XXX/ssl-certs/privkey.pem
-      - --address=${HOST_IP}:51515
-      - --server-username=${SERVER_USER}
-      - --server-password=${SERVER_PASSWORD}
+      - --disable-csrf-token-checks
+      - --address=0.0.0.0:51515
+      - --server-username=${KOPIA_SERVER_USER}
+      - --server-password=${KOPIA_SERVER_PASSWORD}
     volumes:
-      - /mnt/kopia/tmp:/tmp:shared
-      - /mnt/kopia/cache:/app/cache
-      - kopia_config:/app/config
-      - kopia_logs:/app/logs
-      - /:/data:ro
+      - ./kopia/backups:/repository # Path for storing snapshots, aka encrypted backups
+      - ./kopia/snapshots:/tmp:shared # Path for browsing mounted snaphots
+      # Local folders needed by kopia
+      - ./kopia/config:/app/config
+      - ./kopia/cache:/app/cache
+      - ./kopia/logs:/app/logs
     ports:
       - 51515:51515 # WebUI
     networks:
@@ -48,9 +43,9 @@ services:
       - PGID=${GID}
       - TZ=${TIMEZONE}
     volumes:
-      - syncthing_config:/config
-      - syncthing_data1:/data1
-      - syncthing_data2:/data2
+      - ./syncthing/config:/config
+      - ./syncthing/data1:/data1
+      - ./syncthing/data2:/data2
     ports:
       - 8384:8384 # WebUI
       - 22000:22000/tcp # TCP listening port
@@ -58,15 +53,7 @@ services:
       - 21027:21027/udp # Protocol discovery
     networks:
       - moon_network
-
-volumes:
-  kopia_config:
-  kopia_cache:
-  kopia_logs:
-  syncthing_config:
-  syncthing_data1:
-  syncthing_data2:
-
+      
 networks:
   moon_network:
 
