Add syncthing volume 'backups'

--- a/moon/docker-compose/moon.yml
+++ b/moon/docker-compose/moon.yml
@@ -48,6 +48,7 @@ services:
       - TZ=${TIMEZONE}
     volumes:
       - ./syncthing/config:/config
+      - ./syncthing/backups:/backups
     ports:
       - 8384:8384 # WebUI
       - 22000:22000/tcp # TCP listening port
