--- a/thebridge/docker-compose/thebridge.yml
+++ b/thebridge/docker-compose/thebridge.yml
@@ -1,59 +1,64 @@
 services:
+
   homepage:
-    image: ghcr.io/gethomepage/homepage:${HOMEPAGE_VERSION}
+    image: ghcr.io/gethomepage/homepage:${HOMEPAGE_VER}
     container_name: homepage
     security_opt:
       - no-new-privileges:true
     restart: unless-stopped
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=Etc/UTC
+      - PUID=${UID}
+      - PGID=${GID}
+      - TZ=${TIMEZONE}
     volumes:
-      - homepage_config:/app/config # Make sure your local config directory exists
+      - homepage_config:/app/config 
       - homepage_images:/app/public/images
-      #- /var/run/docker.sock:/var/run/docker.sock:ro # optional, for docker integrations. USE SOCKET PROXY INSTEAD: https://github.com/Tecnativa/docker-socket-proxy
+#      - /var/run/docker.sock:/var/run/docker.sock:ro # optional, for docker integrations. USE SOCKET PROXY INSTEAD: https://github.com/Tecnativa/docker-socket-proxy
     ports:
       - 3000:3000
+    networks:
+      thebridge_net:
 
   speedtest-tracker:
-    image: lscr.io/linuxserver/speedtest-tracker:${SPEEDTEST_TRACKER_VERSION}
+    image: lscr.io/linuxserver/speedtest-tracker:${SPEEDTEST_TRACKER_VER}
     container_name: speedtest-tracker
     security_opt:
       - no-new-privileges:true
     restart: unless-stopped
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=Etc/UTC
+      - PUID=${UID}
+      - PGID=${GID}
+      - TZ=${TIMEZONE}
       - APP_KEY=${SPEEDTEST_APP_KEY} # How to generate an app key: https://speedtest-tracker.dev/
       - DB_CONNECTION=pgsql # postgres
       - SPEEDTEST_SCHEDULE="0 */6 * * *" # cron format, set to run at minute 0 past every 6th hour
-      - SPEEDTEST_SERVERS=8839 # Find with: docker exec speedtest-tracker php /app/www/artisan app:ookla-list-servers
-      - DB_HOST=${POSTGRES_DB_HOST} #optional
-      - DB_PORT=5432 #optional
-      - DB_DATABASE=${POSTGRES_DATABASE_NAME} #optional
-      - DB_USERNAME=${POSTGRES_USER} #optional
-      - DB_PASSWORD=${POSTGRES_PASSWORD} #optional
-      - PRUNE_RESULTS_OLDER_THAN=365 #optional, days to keep test results
-      #- APP_DEBUG=true
+      - SPEEDTEST_SERVERS=8839 # Find with: 'docker exec speedtest-tracker' 'php /app/www/artisan app:ookla-list-servers'
+      - DB_HOST=${POSTGRES_DB_HOST} # optional
+      - DB_PORT=5432 # optional
+      - DB_DATABASE=${POSTGRES_DATABASE_NAME} # optional
+      - DB_USERNAME=${POSTGRES_USER} # optional
+      - DB_PASSWORD=${POSTGRES_PASSWORD} # optional
+      - PRUNE_RESULTS_OLDER_THAN=365 # optional, days to keep test results
+#      - APP_DEBUG=true
     volumes:
       - speedtest-tracker_config:/config
       - speedtest-tracker_keys:/config/keys
     ports:
       - 8080:80 # web UI
       - 8443:443
+    networks:
+      thebridge_net:
 
   postgres-db:
-    image: postgres:${POSTGRES_VERSION}
+    image: postgres:${POSTGRES_VER}
     container_name: postgres-db
     security_opt:
       - no-new-privileges:true
     restart: unless-stopped
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=Etc/UTC
+      - PUID=${UID}
+      - PGID=${GID}
+      - TZ=${TIMEZONE}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DATABASE_NAME}
@@ -61,39 +66,45 @@ services:
       - postgres-data:/var/lib/postgresql/data
     ports:
       - 5432:5432
+    networks:
+      thebridge_net:
 
   homeassistant:
-    image: homeassistant/home-assistant:${HOMEASSISTANT_VERSION}
+    image: homeassistant/home-assistant:${HOMEASSISTANT_VER}
     container_name: homeassistant
     security_opt:
       - no-new-privileges:true
     restart: unless-stopped
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=Etc/UTC
+      - PUID=${UID}
+      - PGID=${GID}
+      - TZ=${TIMEZONE}
     volumes:
       - homeassistant_config:/config
     ports:
       - 8123:8123
+    networks:
+      thebridge_net:
 
   uptime-kuma:
-    image: louislam/uptime-kuma:${UPTIME_KUMA_VERSION}
+    image: louislam/uptime-kuma:${UPTIME_KUMA_VER}
     container_name: uptime-kuma
     security_opt:
       - no-new-privileges:true
     restart: unless-stopped
     environment:
-      - PUID=${PUID}
-      - PGID=${PUID}
-      - TZ=Etc/UTC
+      - PUID=${UID}
+      - PGID=${UID}
+      - TZ=${TIMEZONE}
     volumes:
       - uptime-kuma_data:/data
     ports:
       - 3001:3001 # <Host/External Port>:<Container/Internal Port>
+    networks:
+      thebridge_net:
 
   ntfy:
-    image: binwiederhier/ntfy:${NTFY_VERSION}
+    image: binwiederhier/ntfy:${NTFY_VER}
     container_name: ntfy
     security_opt:
       - no-new-privileges:true
@@ -111,14 +122,16 @@ services:
       retries: 3
       start_period: 40s
     environment:
-      PUID: ${PUID}
-      PGID: ${PUID}
-      TZ: Etc/UTC
+      - PUID=${UID}
+      - PGID=${UID}
+      - TZ=${TIMEZONE}
     volumes:
       - ntfy_cache:/var/cache/ntfy
       - ntfy_data:/etc/ntfy
     ports:
       - 8000:80
+    networks:
+      thebridge_net:
 
   prometheus:
     image: prom/prometheus:${PROMETHEUS_VER}
@@ -131,10 +144,27 @@ services:
       - PGID=${GID}
       - TZ=${TIMEZONE}
     volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml #must manually create?
-      - prometheus_data:/prometheus
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml # Main config. Sets global settings, scrape targets, alerting rules, service discovery, etc.
+      - ./prometheus/data:/prometheus
     ports:
       - 9090:9090
+    networks:
+      thebridge_net:
+
+  node-exporter:
+    image: quay.io/prometheus/node-exporter:${PROM_NODE_EXP_VER}
+    container_name: node-exporter
+    security_opt:
+      - no-new-privileges:true
+    restart: unless-stopped
+#    cap_add:
+#      - SYS_TIME     # Optional, for time metrics if needed
+#      - NET_ADMIN    # Optional, for advanced network metrics
+    user: "${UID}:${GID}"
+    network_mode: host
+#    pid: host
+#    volumes:
+#      - '/:/host:ro,rslave'
 
   grafana:
     image: grafana/grafana:${GRAFANA_VER}
@@ -149,33 +179,15 @@ services:
       - GF_SERVER_ROOT_URL=http://my.grafana.server/
       - GF_INSTALL_PLUGINS=grafana-clock-panel #installs official clock plugin
     volumes:
-      - grafana_data:/var/lib/grafana
+      - ./grafana/data:/var/lib/grafana
     ports:
       - 3002:3000 # <Host/External Port>:<Container/Internal Port>
-
-  influxdb:
-    image: influxdb:${INFLUXDB_VER}  # You can specify a specific version, like influxdb:2.7
-    container_name: influxdb
-    security_opt:
-      - no-new-privileges:true
-    restart: unless-stopped
-    environment:
-      - PUID=${UID}
-      - PGID=${GID}
-      - TZ={TIMEZONE}
-      - INFLUXDB_ADMIN_USER=${INFLUXDB_ADMIN_USER}  # Admin user for InfluxDB
-      - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_ADMIN_PASS}  # Admin password
-      - INFLUXDB_BUCKET=${INFLUXDB_BUCKERT}  # Default bucket
-      - INFLUXDB_ORG=${INFLUXDB_ORG}  # Default organization
-      - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}  # Authentication token
-    volumes:
-      - ./influxdb/data:/var/lib/influxdb2  # Persistent storage for InfluxDB
-    ports:
-      - 8086:8086  # InfluxDB's default port
+    networks:
+      thebridge_net:
 
   apprise-api:
     image: lscr.io/linuxserver/apprise-api:${APPRISE_VER}
-    container_name: apprise-api
+    container_name: apprise
     security_opt:
       - no-new-privileges:true
     restart: unless-stopped
@@ -189,6 +201,11 @@ services:
       - ./apprise/attachments:/attachments # optional
     ports:
       - 8888:8000
+    networks:
+      thebridge_net:
+
+networks:
+  thebridge_net:
 
 volumes:
   homepage_config:
@@ -200,8 +217,3 @@ volumes:
   uptime-kuma_data:
   ntfy_cache:
   ntfy_data:
-  #prometheus_data:
-  #grafana_data:
-  #influxdb_data:
-  #apprise_config:
-  #apprise_attachments:
