--- a/thebridge/docker-compose/thebridge.yml
+++ b/thebridge/docker-compose/thebridge.yml
@@ -160,10 +160,12 @@ services:
 #      - SYS_TIME     # Optional, for time metrics if needed
 #      - NET_ADMIN    # Optional, for advanced network metrics
     user: "${UID}:${GID}"
-    network_mode: host
 #    pid: host
 #    volumes:
 #      - '/:/host:ro,rslave'
+    ports:
+      - 9090:9090
+    network_mode: host
 
   grafana:
     image: grafana/grafana:${GRAFANA_VER}
