--- a/thebridge/docker-compose/thebridge.yml
+++ b/thebridge/docker-compose/thebridge.yml
@@ -163,8 +163,8 @@ services:
 #    pid: host
 #    volumes:
 #      - '/:/host:ro,rslave'
-    ports:
-      - 9090:9090
+#    ports:
+#      - 9090:9090
     network_mode: host
 
   grafana:
