Update apt syntax to modern standards

--- a/ansible/playbooks/install_apache.yml
+++ b/ansible/playbooks/install_apache.yml
@@ -5,15 +5,15 @@
   tasks:
 
   - name: update repository index
-    apt:
+    apt.builtin.apt:
       update_cache: yes
 
   - name: install apache2 package
-    apt:
+    apt.builtin.apt:
       name: apache2
       state: latest
 
   - name: add php support for apache
-    apt:
+    apt.builtin.apt:
       name: libapache2-mod-php
       state: latest
