Reorganize/rename linkding version variable

--- a/hosts/hyperion/hyperion_template.env
+++ b/hosts/hyperion/hyperion_template.env
@@ -27,11 +27,12 @@ POSTGRES_PASSWORD=
 
 # Docker container name
 LINKD_CONTAINER_NAME=linkding
+# Docker container version, see: https://hub.docker.com/r/sissbruecker/linkding/tags
+LINKD_VERS=
 # Port on the host system that the application should be published on
 LINKD_HOST_PORT=9090
 # Directory on the host system that should be mounted as data dir into the Docker container
 LINKD_HOST_DATA_DIR=./linkding/data
-#LINKD_VERS=
 
 # Can be used to run linkding under a context path, for example: linkding/
 # Must end with a slash `/`
