Add read_only parameter

--- a/docker-compose_security.yml
+++ b/docker-compose_security.yml
@@ -8,6 +8,7 @@ services:
     security_opt:
       - no-new-privileges:true # Prevent processes from gaining new privileges
       - cap_drop=ALL # Drop all capabilities and add only necessary ones
+    read_only: true # Prevent container from writing anything to the host
     restart: unless-stopped
     tmpfs: # Mount tmpfs for temporary data
       - /tmp
